add_executable(
  VovisRenderer
  ${PROJECT_SOURCE_DIR}/ParallelRenderer/Application.cpp
)
target_include_directories(
  VovisRenderer
  PUBLIC
  ${OSPRAY_INCLUDE_PATH}
  ${OSPRAY_INCLUDE_PATH}/ospray
  ${MPI_CXX_INCLUDE_PATH}
  ${POCO_INCLUDE_PATH}
  ${PROJECT_SOURCE_DIR}
)
target_link_libraries(
  VovisRenderer
  VOVIS_LIB
  ${OSPRAY_LIB}
  ${OSPRAY_LIB_COMMON}
  ${OSPRAY_LIB_MPI}
  ${VTK_LIBRARIES}
  ${EMBREE_LIB}
  ${TBB_LIB}
  ${TBB_MALLOC_LIB}
  ${MPI_CXX_LIBRARIES}
  ${POCO_FOUNDATION_LIB}
  ${POCO_NET_LIB}
  ${POCO_UTIL_LIB}
)
