file(GLOB_RECURSE VOVIS_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_library(VOVIS_LIB SHARED ${VOVIS_FILES})
target_include_directories(VOVIS_LIB
  PUBLIC
    ${OSPRAY_INCLUDE_DIRS}
    ${MPI_CXX_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}
)
target_link_libraries(VOVIS_LIB
  PUBLIC
    ${OSPRAY_LIBRARY}
    ${VTK_LIBRARIES}
    ${TBB_LIBRARIES}
    ${MPI_CXX_LIBRARIES}
    ${Poco_LIBRARIES}
)
target_compile_features(VOVIS_LIB PRIVATE cxx_std_11)
